# adaptive-belief-ecology-system

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/agents/: __init__.py  baseline_memory_bridge.py  belief_creator.py  consistency_checker.py  contradiction_auditor.py  decay_controller.py  experiment_orchestrator.py  llm_mutation.py  mutation_engineer.py  narrative_explainer.py  perception.py  reinforcement.py  relevance_curator.py  resolution_strategist.py  reward_shaper.py  rl_policy.py  safety_enforcer.py  safety_sanity.py  scheduler.py
backend/api/: __init__.py  app.py  schemas.py
backend/auth/: __init__.py
backend/benchmark/: __init__.py  baselines.py  runner.py  scenarios.py
backend/chat/: __init__.py  response_validator.py  service.py
backend/core/: __init__.py  config.py  deps.py  events.py
backend/llm/: __init__.py  anthropic_provider.py  (+4 more)
baselines/: __init__.py  append_only_memory.py  plain_llm_runner.py
beliefs/: __init__.py  conflict_resolution.py
data/: contradiction_corpus.json  test_abes.db
docs/: agents.md  architecture.md
experiments/: __init__.py  contradiction_benchmark.py  decay_sweep.py  drift_benchmark.py  run_all.py
frontend/: package-lock.json  package.json  tailwind.config.js
interfaces/: __init__.py  belief_ingest.py
metrics/: __init__.py  decay_metrics.py  drift_metrics.py
results/: conflict_resolution_log.json  contradiction_benchmark.json  determinism_check.json  drift_comparison.json  offline_verification.json  verification_summary.json
(+101 files in other folders)
