[project]
name = "abes"
version = "0.1.0"
description = "Adaptive Belief Ecology System"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "pydantic>=2.9,<2.10",
    "pydantic-settings>=2.4,<2.5",
    "msgpack>=1.0",
    "sentence-transformers>=5.0",
    "spacy>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
